# PracticasComputoGrafico_2024-1

./: .gitignore  README.md
CharacterDraw/: CMakeLists.txt  E02-318192950.cpp  Mesh.cpp  Mesh.h  MeshColor.cpp  ObjectReader.cpp  ObjectReader.h  P02-318192950.cpp  Shader.h  Window.h  main.cpp  mainTest.cpp
CharacterDraw/ObjParsed/: faces.txt  vertex.txt
CharacterDraw/shaders/: shaderpersonaje.frag  shaderpersonaje.vert
ImageTriangularizer/: CMakeLists.txt  README.md  main.cpp
Practica_01/: CMakeLists.txt  E01-318192950.cpp  Mesh.h  P01-318192950.cpp  Shader.h  Window.h
Practica_02/: CMakeLists.txt  Mesh.h  P02-318192950.cpp  Shader.cpp  Window.cpp  past.cpp  practica2.cpp
Practica_03/: CMakeLists.txt  Camera.cpp  Camera.h  E03-318192950.cpp  E03_318192950.cpp  Mesh.h  P03-318192950.cpp  Shader.cpp  Shader.h  Window.cpp  Window.h  definition.h
Practica_03/shaders/: shader.vert
Practica_04/: BaseGLProject.vcxproj  BaseGLProject.vcxproj.filters  CMakeLists.txt  Camera.h  E04-318192950.cpp  P04-318192950.cpp  README.md  Shader.cpp  Sphere.cpp  Window.cpp  Window.h
Practica_05/: CMakeLists.txt  DirectionalLight.cpp  E05-318192950.cpp  Model.cpp  Model.h  ModelMatrix.cpp  ModelMatrix.h  P05-318192950.cpp  PointLight.cpp  Shader_m.cpp  Shader_m.h  Skybox.cpp  Skybox.h  Sphere.cpp  Texture.cpp  Window.cpp  Window.h  stb_image.h
Practica_05/Models/: BMW.mtl  BMW_Hood.mtl  BMW_Wheel.mtl  cola.mtl  cuerpo.mtl  goddardcuerpoobj.mtl  pata_delantera.mtl  pata_trasera.mtl
Practica_06/: CMakeLists.txt  Camera.cpp  DirectionalLight.cpp  DirectionalLight.h  E06-318192950.cpp  Light.h  Material.h  Mesh.h  Mesh_tn.cpp  Model.cpp  Model.h  ModelMatrix.cpp  ModelMatrix.h  MultiTexture.cpp  MultiTexture.h  P06-318192950.cpp  PointLight.cpp  PointLight.h  Shader_m.cpp  Shader_m.h  Skybox.cpp  Sphere.cpp  Sphere.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Window.cpp  Window.h  definition.h  stb_image.h
Practica_06/EditableFiles/BMW/: cofre.blend  wheel.blend  wheel_sTex.blend  wheel_sTex.blend1
Practica_06/EditableFiles/BMW/bmw-m3-gtr/ToProgram/Models/: BMW.mtl
Practica_06/EditableFiles/BMW/bmw-m3-gtr/source/: bmw_m3_gtr_razor.glb
Practica_06/EditableFiles/BMW/bmw-m3-gtr/textures/: Editable.blend  Editable.blend1
Practica_06/Models/: BMW.mtl  BMW_Hood.mtl  BMW_Hood_logo.mtl  BMW_Wheel.mtl  BMW_no_hood.mtl  DadoAnimales.blend  DadoAnimales.blend1
Practica_06/Textures/: dado_anim_edit.psd
Practica_07/: CMakeLists.txt  Model.cpp  P07-318192950.cpp  Window.cpp  Window.h
Practica_07/Models/: faro.blend  faro.blend1
Practica_07/shaders/: shader_light.frag
Practica_07_ModPrevio/: CMakeLists.txt  CMakeSettings.json  DirectionalLight.h  Gui.cpp  Gui.h  Light.cpp  Light.h  P07-318192950.cpp  PointLight.cpp  PointLight.h  Skybox.h  SpotLight.cpp  SpotLight.h  Window.cpp  Window.h  main.cpp
Practica_07_ModPrevio/shaders/: shader_light.frag
Practica_08/: .clang-format  CMakeLists.txt  Camera.cpp  E08-318192950.cpp  LightCollection.h  ModelMatrix.cpp  P07-318192950.cpp  P08-318192950.cpp  README.md  Shader_light.cpp  Texture.cpp  Window.cpp  Window.h  valgrind.xml
Practica_08/Models/: BMW_Editable.blend  BMW_Editable.blend1  BMW_Hood.mtl  BMW_Wheel.mtl  BMW_hood.mtl  Editable.mtl  Farola.mtl  faro.mtl
Practica_08/Textures/: LogoFI.tga
Practica_08/Textures/BMW/: WheelSingleTexture.tga
Practica_09/: .clang-format  Animation.cpp  Animation.h  CMakeLists.txt  E09-318192950.cpp  ModelMatrix.h  P07-318192950.cpp  P08-318192950.cpp  P09-318192950.cpp  Skybox.cpp  SpotLight.h  Window.cpp  Window.h
Practica_09/Models/: BMW_base.mtl  BMW_base_1.mtl  BMW_wheel.mtl  Helipuerto.blend  Helipuerto.blend1  MaquinaCristal.mtl  MaquinaPinball.mtl  uh60_base.mtl
Practica_09/Textures/: transparent_texture.tga  vela.tga
Practica_09_2/: CMakeLists.txt  Counter.cpp  Counter.h  Displacer.h  Model.cpp  ModelMatrix.cpp  ModelMatrix.h  P09-318192950.cpp  P09_2-318192950.cpp  SpotLight.cpp  Window.cpp
Practica_09_2/Models/: Helipuerto.mtl
Practica_09_2/Textures/: TexturaHelipuerto.psd  Texturas_NieR.psd  engine.tga
Practica_10/: .clang-format  CMakeLists.txt  Camera.h  CanicaAnimacion.json  CarAnimation.json  Counter.cpp  Displacer.cpp  E10-318192950-helic.cpp  E10-318192950-lab.cpp  E10-318192950.cpp  Entity.cpp  Entity.h  KeyFrameAnimation.cpp  KeyFrameAnimation.h  ModelMatrix.cpp  P10-318192950.cpp  Skybox.h  Window.cpp  Window.h
Practica_10/Models/: BMW.mtl  BMW_wheel.mtl  MaquinaPinball.mtl  cone.mtl  sword.mtl
Tarea03/: CMakeLists.txt  ProgramaGPT.cpp  ProgramaGPT_00.cpp  ProgramaGPT_01.cpp  ProgramaGPT_NoBoost.cpp  PromptChatGPT  README.md
TareaExtra/: Camera.cpp  Camera.h  DirectionalLight.cpp  Gui.cpp  Gui.h  Light.cpp  PointLight.cpp  Shader_light.cpp  Skybox.cpp  Skybox.h  SpotLight.h  Window.cpp  Window.h  main.cpp
TareaExtra/Capturas/: cut.ps1
